[package]
name = "webcrawler"
version = "0.1.0"
edition = "2021"
authors = ["Mintype"]
description = "A simple Rust web crawler"
repository = "https://github.com/Mintype/webcrawler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
futures-io = "0.3.30"
