[package]
name = "webcrawler"
version = "0.1.1"
edition = "2021"
authors = ["Mintype"]
description = "A simple Rust web crawler"
repository = "https://github.com/Mintype/webcrawler"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
futures-io = "0.3.30"
url = "2.2"